--- a/Capstone-Project1/Data_Wrangling/Final_Data_Wrangling_Notebook.ipynb
+++ b/Capstone-Project1/Data_Wrangling/Final_Data_Wrangling_Notebook.ipynb
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
        "[210 rows x 8 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1191,6 +1191,16 @@
    ],
    "source": [
     "seeds.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We can write the cleaned data to a new file that can be used in other directories:\n",
+    "seeds.to_csv('seeds.csv',index=False)"
    ]
   },
   {
