CP1_LR_model_update

--- a/Capstone-Project1/Code/Logistic_Regression_Model.ipynb
+++ b/Capstone-Project1/Code/Logistic_Regression_Model.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "4   True  False     False      Kama"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "2 -2.906762  0.707400 -0.116656 -1.140965  0.569434  0.458995  3.413099"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "Name: class, dtype: bool"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,44 +723,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9345238095238095"
-      ]
-     },
-     "execution_count": 243,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The GaussianNB training score: 0.9345\n"
+     ]
     }
    ],
    "source": [
     "# Print the training score\n",
-    "gNB.score(X_train,y_train)"
+    "print('The GaussianNB training score:', round(gNB.score(X_train,y_train), 4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8571428571428571"
-      ]
-     },
-     "execution_count": 244,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The GaussianNB test score: 0.8571\n"
+     ]
     }
    ],
    "source": [
     "# Print the test score\n",
-    "gNB.score(X_test, y_test)"
+    "print('The GaussianNB test score:', round(gNB.score(X_test, y_test), 4))"
    ]
   },
   {
@@ -772,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,33 +850,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "With \"asymmetry_coefficient\" removed-\n",
       "\n",
       "Training score: 97.02 %   Test score: 85.71 %\n"
      ]
     }
    ],
    "source": [
-    "# check score\n",
-    "clf = LogisticRegression(C=37.5, solver='lbfgs', max_iter=5000)\n",
+    "# Check score with asymmetry_coefficient removed\n",
+    "clf2 = LogisticRegression(C=37.5, solver='lbfgs', max_iter=5000)\n",
     "\n",
-    "clf.fit(X2_train, y2_train)\n",
+    "clf2.fit(X2_train, y2_train)\n",
     "\n",
-    "test_score = clf.score(X2_test, y2_test)\n",
-    "train_score = clf.score(X2_train, y2_train)\n",
+    "test_score = clf2.score(X2_test, y2_test)\n",
+    "train_score = clf2.score(X2_train, y2_train)\n",
     "\n",
+    "print('\\nWith \"asymmetry_coefficient\" removed-')\n",
     "print('\\nTraining score:',round(train_score, 4) * 100,'%   Test score:',round(test_score,4) * 100,'%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +887,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training Classification Report:\n",
+      "Training Classification Report with 'asymmetry_coefficient' removed:\n",
+      "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "         1.0       0.97      0.95      0.96        59\n",
@@ -902,7 +900,8 @@
       "weighted avg       0.97      0.97      0.97       168\n",
       "\n",
       "\n",
-      "Test Classification Report:\n",
+      "Test Classification Report with 'asymmetry_coefficient' removed:\n",
+      "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "         1.0       0.67      0.91      0.77        11\n",
@@ -917,44 +916,48 @@
     }
    ],
    "source": [
-    "y_pred_train = clf.predict(X2_train)\n",
+    "y_pred_train = clf2.predict(X2_train)\n",
     "\n",
-    "y_pred_test = clf.predict(X2_test)\n",
+    "y_pred_test = clf2.predict(X2_test)\n",
     "\n",
-    "print(\"\\nTraining Classification Report:\")\n",
+    "print(\"\\nTraining Classification Report with 'asymmetry_coefficient' removed:\\n\")\n",
     "print(classification_report(y_train, y_pred_train))\n",
     "\n",
-    "print(\"\\nTest Classification Report:\")\n",
+    "print(\"\\nTest Classification Report with 'asymmetry_coefficient' removed:\\n\")\n",
     "print(classification_report(y_test, y_pred_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "With \"asymmetry_coefficient\" and \"compactness\" removed-\n",
       "\n",
       "Training score: 97.02 %   Test score: 85.71 %\n"
      ]
     }
    ],
    "source": [
-    "clf2 = LogisticRegression(C=37.5, solver='lbfgs', max_iter=5000)\n",
-    "clf2.fit(X3_train, y3_train)\n",
+    "# Check score with asymmetry_coefficient & compactness removed\n",
+    "clf3 = LogisticRegression(C=37.5, solver='lbfgs', max_iter=5000)\n",
+    "clf3.fit(X3_train, y3_train)\n",
     "\n",
-    "test_score = clf2.score(X3_test, y3_test)\n",
-    "train_score = clf2.score(X3_train, y3_train)\n",
+    "test_score = clf3.score(X3_test, y3_test)\n",
+    "train_score = clf3.score(X3_train, y3_train)\n",
     "\n",
+    "print('\\nWith \"asymmetry_coefficient\" and \"compactness\" removed-')\n",
     "print('\\nTraining score:',round(train_score, 4) * 100,'%   Test score:',round(test_score,4) * 100,'%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +965,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training Classification Report:\n",
+      "Training Classification Report with 'asymmetry_coefficient' and 'compactness' removed:\n",
+      "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "         1.0       0.97      0.95      0.96        59\n",
@@ -974,7 +978,8 @@
       "weighted avg       0.97      0.97      0.97       168\n",
       "\n",
       "\n",
-      "Test Classification Report:\n",
+      "Test Classification Report with 'asymmetry_coefficient' and 'compactness' removed:\n",
+      "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "         1.0       0.67      0.91      0.77        11\n",
@@ -989,44 +994,48 @@
     }
    ],
    "source": [
-    "y2_pred_train = clf2.predict(X3_train)\n",
+    "y3_pred_train = clf3.predict(X3_train)\n",
     "\n",
-    "y2_pred_test = clf2.predict(X3_test)\n",
+    "y3_pred_test = clf3.predict(X3_test)\n",
     "\n",
-    "print(\"\\nTraining Classification Report:\")\n",
-    "print(classification_report(y2_train, y2_pred_train))\n",
+    "print(\"\\nTraining Classification Report with 'asymmetry_coefficient' and 'compactness' removed:\\n\")\n",
+    "print(classification_report(y3_train, y3_pred_train))\n",
     "\n",
-    "print(\"\\nTest Classification Report:\")\n",
-    "print(classification_report(y2_test, y2_pred_test))"
+    "print(\"\\nTest Classification Report with 'asymmetry_coefficient' and 'compactness' removed:\\n\")\n",
+    "print(classification_report(y3_test, y3_pred_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "With \"compactness\" removed-\n",
       "\n",
       "Training score: 98.21 %   Test score: 95.24000000000001 %\n"
      ]
     }
    ],
    "source": [
+    "# Check score with compactness removed\n",
     "clf4 = LogisticRegression(C=37.5, solver='lbfgs', max_iter=5000)\n",
     "clf4.fit(X4_train, y4_train)\n",
     "\n",
     "test_score = clf4.score(X4_test, y4_test)\n",
     "train_score = clf4.score(X4_train, y4_train)\n",
     "\n",
+    "print('\\nWith \"compactness\" removed-')\n",
     "print('\\nTraining score:',round(train_score, 4) * 100,'%   Test score:',round(test_score,4) * 100,'%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1043,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training Classification Report:\n",
+      "Training Classification Report with 'compactness' removed:\n",
+      "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "         1.0       0.98      0.97      0.97        59\n",
@@ -1046,7 +1056,8 @@
       "weighted avg       0.98      0.98      0.98       168\n",
       "\n",
       "\n",
-      "Test Classification Report:\n",
+      "Test Classification Report with 'compactness' removed:\n",
+      "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "         1.0       0.85      1.00      0.92        11\n",
@@ -1065,10 +1076,10 @@
     "\n",
     "y4_pred_test = clf4.predict(X4_test)\n",
     "\n",
-    "print(\"\\nTraining Classification Report:\")\n",
+    "print(\"\\nTraining Classification Report with 'compactness' removed:\\n\")\n",
     "print(classification_report(y4_train, y4_pred_train))\n",
     "\n",
-    "print(\"\\nTest Classification Report:\")\n",
+    "print(\"\\nTest Classification Report with 'compactness' removed:\\n\")\n",
     "print(classification_report(y4_test, y4_pred_test))"
    ]
   },
@@ -1080,9 +1091,9 @@
     "\n",
     "The logistic regression model performs well, with accuracy scores reaching greater than $95\\%$. Removing the 'compactness' column from the dataframe seems to keep performance while having a more realistic classificaiton report. \n",
     "\n",
-    "Optimizing the hyperparameter $C$ for tuning regularization reduces overfitting. The test scores are improved, closing the gap between training and test error. A naive Bayes approach did not perform as well as logistic regression. \n",
+    "Using the 'lbfgs' solver gave the best results. Optimizing the hyperparameter $C$ for tuning regularization reduces overfitting. The test scores are improved, closing the gap between training and test error. A naive Bayes approach did not perform as well as logistic regression. \n",
     "\n",
-    "Finally, we will build a neural network model and compare its performance."
+    "Next, unsupervised clustering algorithms will be evaluated, such as K-means. Finally, we will build a neural network model and compare its performance to the previous models."
    ]
   }
  ],
