--- a/Capstone-Project1/Code/Unsupervised_Learning_Models.ipynb
+++ b/Capstone-Project1/Code/Unsupervised_Learning_Models.ipynb
@@ -456,13 +456,7 @@
       "168/168 [==============================] - 0s 372us/step - loss: 0.5271 - accuracy: 0.8869 - val_loss: 0.5163 - val_accuracy: 0.7857\n",
       "Epoch 55/1000\n",
       "168/168 [==============================] - 0s 186us/step - loss: 0.5277 - accuracy: 0.8690 - val_loss: 0.5197 - val_accuracy: 0.7857\n",
-      "Epoch 56/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 56/1000\n",
       "168/168 [==============================] - 0s 285us/step - loss: 0.5161 - accuracy: 0.8869 - val_loss: 0.5182 - val_accuracy: 0.8095\n",
       "Epoch 57/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.5204 - accuracy: 0.8512 - val_loss: 0.5013 - val_accuracy: 0.8095\n",
@@ -806,13 +800,7 @@
       "168/168 [==============================] - 0s 279us/step - loss: 0.1945 - accuracy: 0.9464 - val_loss: 0.2627 - val_accuracy: 0.8571\n",
       "Epoch 221/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.1997 - accuracy: 0.9286 - val_loss: 0.2574 - val_accuracy: 0.8571\n",
-      "Epoch 222/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 222/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.1984 - accuracy: 0.9405 - val_loss: 0.2695 - val_accuracy: 0.8571\n",
       "Epoch 223/1000\n",
       "168/168 [==============================] - 0s 361us/step - loss: 0.1962 - accuracy: 0.9286 - val_loss: 0.2461 - val_accuracy: 0.9048\n",
@@ -1039,13 +1027,7 @@
       "168/168 [==============================] - 0s 279us/step - loss: 0.7320 - accuracy: 0.5655 - val_loss: 0.7044 - val_accuracy: 0.6667\n",
       "Epoch 83/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.7306 - accuracy: 0.5774 - val_loss: 0.6983 - val_accuracy: 0.6667\n",
-      "Epoch 84/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 84/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.7269 - accuracy: 0.5893 - val_loss: 0.6921 - val_accuracy: 0.6667\n",
       "Epoch 85/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.7301 - accuracy: 0.5893 - val_loss: 0.6907 - val_accuracy: 0.6667\n",
@@ -1271,13 +1253,7 @@
       "168/168 [==============================] - 0s 365us/step - loss: 0.4566 - accuracy: 0.8869 - val_loss: 0.4436 - val_accuracy: 0.8571\n",
       "Epoch 193/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.4494 - accuracy: 0.8988 - val_loss: 0.4327 - val_accuracy: 0.8571\n",
-      "Epoch 194/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 194/1000\n",
       "168/168 [==============================] - 0s 317us/step - loss: 0.4558 - accuracy: 0.8631 - val_loss: 0.4312 - val_accuracy: 0.8810\n",
       "Epoch 195/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.4413 - accuracy: 0.8929 - val_loss: 0.4376 - val_accuracy: 0.8810\n",
@@ -1503,13 +1479,7 @@
       "168/168 [==============================] - 0s 186us/step - loss: 0.2465 - accuracy: 0.9167 - val_loss: 0.2610 - val_accuracy: 0.8810\n",
       "Epoch 303/1000\n",
       "168/168 [==============================] - 0s 416us/step - loss: 0.2496 - accuracy: 0.9167 - val_loss: 0.2640 - val_accuracy: 0.8810\n",
-      "Epoch 304/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 304/1000\n",
       "168/168 [==============================] - 0s 286us/step - loss: 0.2432 - accuracy: 0.9107 - val_loss: 0.2620 - val_accuracy: 0.8810\n",
       "Epoch 305/1000\n",
       "168/168 [==============================] - 0s 284us/step - loss: 0.2428 - accuracy: 0.9107 - val_loss: 0.2595 - val_accuracy: 0.8810\n",
@@ -1735,13 +1705,7 @@
       "168/168 [==============================] - 0s 318us/step - loss: 0.2010 - accuracy: 0.9167 - val_loss: 0.2385 - val_accuracy: 0.9048\n",
       "Epoch 413/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.2018 - accuracy: 0.9226 - val_loss: 0.2352 - val_accuracy: 0.9048\n",
-      "Epoch 414/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 414/1000\n",
       "168/168 [==============================] - 0s 225us/step - loss: 0.2090 - accuracy: 0.9107 - val_loss: 0.2442 - val_accuracy: 0.8571\n",
       "Epoch 415/1000\n",
       "168/168 [==============================] - 0s 335us/step - loss: 0.2108 - accuracy: 0.9048 - val_loss: 0.2308 - val_accuracy: 0.8810\n",
@@ -2086,13 +2050,7 @@
       "168/168 [==============================] - 0s 279us/step - loss: 0.6610 - accuracy: 0.7560 - val_loss: 0.6272 - val_accuracy: 0.7857\n",
       "Epoch 148/1000\n",
       "168/168 [==============================] - 0s 186us/step - loss: 0.6588 - accuracy: 0.7381 - val_loss: 0.6259 - val_accuracy: 0.7857\n",
-      "Epoch 149/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 149/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.6597 - accuracy: 0.7500 - val_loss: 0.6184 - val_accuracy: 0.7857\n",
       "Epoch 150/1000\n",
       "168/168 [==============================] - 0s 372us/step - loss: 0.6562 - accuracy: 0.7381 - val_loss: 0.6365 - val_accuracy: 0.8095\n",
@@ -2318,13 +2276,7 @@
       "168/168 [==============================] - 0s 279us/step - loss: 0.4115 - accuracy: 0.8929 - val_loss: 0.4453 - val_accuracy: 0.8810\n",
       "Epoch 258/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.4021 - accuracy: 0.9107 - val_loss: 0.4365 - val_accuracy: 0.9048\n",
-      "Epoch 259/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 259/1000\n",
       "168/168 [==============================] - 0s 236us/step - loss: 0.4355 - accuracy: 0.8631 - val_loss: 0.3920 - val_accuracy: 0.8571\n",
       "Epoch 260/1000\n",
       "168/168 [==============================] - 0s 304us/step - loss: 0.4069 - accuracy: 0.9048 - val_loss: 0.4035 - val_accuracy: 0.8810\n",
@@ -2550,13 +2502,7 @@
       "168/168 [==============================] - 0s 186us/step - loss: 0.2331 - accuracy: 0.9583 - val_loss: 0.2654 - val_accuracy: 0.9048\n",
       "Epoch 368/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.2441 - accuracy: 0.9464 - val_loss: 0.2474 - val_accuracy: 0.9048\n",
-      "Epoch 369/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 369/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.2268 - accuracy: 0.9524 - val_loss: 0.2954 - val_accuracy: 0.9048\n",
       "Epoch 370/1000\n",
       "168/168 [==============================] - 0s 301us/step - loss: 0.2355 - accuracy: 0.9405 - val_loss: 0.2675 - val_accuracy: 0.9048\n",
@@ -2898,13 +2844,7 @@
       "168/168 [==============================] - 0s 186us/step - loss: 0.1410 - accuracy: 0.9702 - val_loss: 0.1830 - val_accuracy: 0.9762\n",
       "Epoch 533/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.1496 - accuracy: 0.9524 - val_loss: 0.2063 - val_accuracy: 0.9524\n",
-      "Epoch 534/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 534/1000\n",
       "168/168 [==============================] - 0s 279us/step - loss: 0.1448 - accuracy: 0.9643 - val_loss: 0.1783 - val_accuracy: 0.9524\n",
       "Epoch 535/1000\n",
       "168/168 [==============================] - 0s 186us/step - loss: 0.1367 - accuracy: 0.9762 - val_loss: 0.1906 - val_accuracy: 0.9762\n",
@@ -3058,7 +2998,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The seeds dataset, though small, is rich in information. The logistic regression model performed best, with a neural network showing similar results using features with those highly correlated removed. "
+    "The seeds dataset, though small, is rich in information. The logistic regression model performed best, with a neural network showing similar results using features with those highly correlated removed. The next step in training the model would be to use each network in a larger inhereted neural network structure. "
    ]
   }
  ],
