--- a/Capstone-Project1/Data_Story/Statistical Analysis.ipynb
+++ b/Capstone-Project1/Data_Story/Statistical Analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "4          5.175    1.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,6 +146,167 @@
     "#Load the data into a data frame and separate into X and y.\n",
     "seeds = pd.read_csv('seeds.csv')\n",
     "seeds.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>perimeter</th>\n",
+       "      <th>compactness</th>\n",
+       "      <th>length</th>\n",
+       "      <th>width</th>\n",
+       "      <th>asymmetry_coefficient</th>\n",
+       "      <th>groove_length</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>210.000000</td>\n",
+       "      <td>210.000000</td>\n",
+       "      <td>210.000000</td>\n",
+       "      <td>210.000000</td>\n",
+       "      <td>210.000000</td>\n",
+       "      <td>210.000000</td>\n",
+       "      <td>210.000000</td>\n",
+       "      <td>210.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>14.847524</td>\n",
+       "      <td>14.559286</td>\n",
+       "      <td>0.870999</td>\n",
+       "      <td>5.628533</td>\n",
+       "      <td>3.258605</td>\n",
+       "      <td>3.700201</td>\n",
+       "      <td>5.408071</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.909699</td>\n",
+       "      <td>1.305959</td>\n",
+       "      <td>0.023629</td>\n",
+       "      <td>0.443063</td>\n",
+       "      <td>0.377714</td>\n",
+       "      <td>1.503557</td>\n",
+       "      <td>0.491480</td>\n",
+       "      <td>0.818448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>10.590000</td>\n",
+       "      <td>12.410000</td>\n",
+       "      <td>0.808100</td>\n",
+       "      <td>4.899000</td>\n",
+       "      <td>2.630000</td>\n",
+       "      <td>0.765100</td>\n",
+       "      <td>4.519000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>12.270000</td>\n",
+       "      <td>13.450000</td>\n",
+       "      <td>0.856900</td>\n",
+       "      <td>5.262250</td>\n",
+       "      <td>2.944000</td>\n",
+       "      <td>2.561500</td>\n",
+       "      <td>5.045000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>14.355000</td>\n",
+       "      <td>14.320000</td>\n",
+       "      <td>0.873450</td>\n",
+       "      <td>5.523500</td>\n",
+       "      <td>3.237000</td>\n",
+       "      <td>3.599000</td>\n",
+       "      <td>5.223000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>17.305000</td>\n",
+       "      <td>15.715000</td>\n",
+       "      <td>0.887775</td>\n",
+       "      <td>5.979750</td>\n",
+       "      <td>3.561750</td>\n",
+       "      <td>4.768750</td>\n",
+       "      <td>5.877000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>21.180000</td>\n",
+       "      <td>17.250000</td>\n",
+       "      <td>0.918300</td>\n",
+       "      <td>6.675000</td>\n",
+       "      <td>4.033000</td>\n",
+       "      <td>8.456000</td>\n",
+       "      <td>6.550000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             area   perimeter  compactness      length       width  \\\n",
+       "count  210.000000  210.000000   210.000000  210.000000  210.000000   \n",
+       "mean    14.847524   14.559286     0.870999    5.628533    3.258605   \n",
+       "std      2.909699    1.305959     0.023629    0.443063    0.377714   \n",
+       "min     10.590000   12.410000     0.808100    4.899000    2.630000   \n",
+       "25%     12.270000   13.450000     0.856900    5.262250    2.944000   \n",
+       "50%     14.355000   14.320000     0.873450    5.523500    3.237000   \n",
+       "75%     17.305000   15.715000     0.887775    5.979750    3.561750   \n",
+       "max     21.180000   17.250000     0.918300    6.675000    4.033000   \n",
+       "\n",
+       "       asymmetry_coefficient  groove_length       class  \n",
+       "count             210.000000     210.000000  210.000000  \n",
+       "mean                3.700201       5.408071    2.000000  \n",
+       "std                 1.503557       0.491480    0.818448  \n",
+       "min                 0.765100       4.519000    1.000000  \n",
+       "25%                 2.561500       5.045000    1.000000  \n",
+       "50%                 3.599000       5.223000    2.000000  \n",
+       "75%                 4.768750       5.877000    3.000000  \n",
+       "max                 8.456000       6.550000    3.000000  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show the summary statistics\n",
+    "seeds.describe()"
    ]
   },
   {
